# rest_scylla

./: Cargo.toml
src/: main.rs
src/api/: task.rs
src/storage/: mod.rs  scdb.rs
static/: index.html
