[package]
name = "nereidConnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "^4.4"
uuid = { version =  "^0.8", features = ["v4"]  }
serde = { version =  "^1", features = ["derive"]  }
scylla =  "^0.10.0"
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4.31", features = ["serde"] }
